# robotino4-lib

./: .gitignore  CMakeLists.txt  README.md
cmake/: Config.cmake.in  MultiCPackConfig.cmake  PackageConfig.txt  Robotino4Config.cmake.in  Robotino4WrapperConfig.cmake.in
doc/: CMakeLists.txt
examples/: CMakeLists.txt  circle.cpp  move_forward.cpp
include/: inputparser.hpp  robotino4.hpp
source/: CMakeLists.txt
source/include/: robotino4.hpp
source/lib/: CMakeLists.txt  robotino4.cpp
source/src/: robotino4.cpp
source/tests/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  robotino4.cpp  robotino4.hpp
tests/: CMakeLists.txt  main.cpp
